2004-11-24  Miguel de Icaza  <miguel@ximian.com>

	* cs-parser.jay: Use verbosity accordingly. 

2004-11-24  Marek Safar  <marek.safar@seznam.cz>

	* expression.cs (Unary.ResolveOperator): Do not report warning;
	AddressOf reads from variable.
	
	(LocalVariableReferences.DoResolveBase): Improved my previous fix.

2004-11-24  Marek Safar  <marek.safar@seznam.cz>

	Fix bug #69462

	* attribute.cs (Attributable): Removed CheckTargets.
	(Attributes.Emit): Explicit attribute targets are tested here.

	* class.cs (EventField.ValidAttributeTargets): Explicit target "field" is
	not enabled for interfaces.

	* codegen.cs (CommonAssemblyModulClass.AddAttributes): Removed CheckTargets.
	(GetAssemblyName): Ouch next bug there.

2004-11-23  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* expression.cs: Error 275 added.
	
2004-11-23  Marek Safar  <marek.safar@seznam.cz>

	Fix bug #69177 (Implemented decimal constant support)

	* cfold.cs (DoConstantNumericPromotions: Add DecimalConstant.
	(BinaryFold): Add DecimalConstant.

	* const.cs (Define): Decimal constant 
	(is not constant.
	(ChangeType): Add decimal type handling.
	(LookupConstantValue): Don't set value for decimal type but
	emit DecimalConstantAttribute. Needed for constant optimization.

	* constant.cs (ToDecimal): New method.
	(ConvertToDecimal): New method.
	(IntConstant): Implemented ConvertToDecimal.
	(DecimalConstant.Emit): Emit optimized version for decimals in
	int range.

	* expression.cs (ResolveOperator): Changed order of constant
	reduction to work correctly with native types which have
	overloaded operators.
	(ResolveMemberAccess): Extract constant value from attribute
	for decimal type.

	* rootcontext.cs (ResolveCore): Add DecimalConstantAttribute.

	* typemanager.cs (TypeManager): Add decimal_constant_attribute_type,
	void_decimal_ctor_int_arg, decimal_constant_attribute_ctor.
	(ChangeType): Decimal is special.
	(TypeToCoreType): Add decimal type.

2004-11-22  Marek Safar  <marek.safar@seznam.cz>
